# AllegroCPP

./: .gitignore  .gitmodules  AllegroCPP.vcxproj  AllegroCPP.vcxproj.filters  CMakeLists.txt  README.md
include/: Audio.h  Graphics.h  System.h  audio_mixer.h  audio_sample.h  audio_sample_instance.h  audio_stream.h  audio_voice.h  bitmap.h  config.h  display.h  display_mode.h  event_queue.h  events.h  file.h  font.h  gif.h  keyboard.h  locked_region.h  menu.h  monitor_info.h  mouse.h  native_dialog.h  path.h  shader.h  state.h  thread.h  timer.h  transform.h  utfstring.h  vertex.h  video.h
src/: audio_all.cpp  audio_mixer.cpp  audio_sample.cpp  audio_sample_instance.cpp  audio_stream.cpp  audio_voice.cpp  bitmap.cpp  config.cpp  display.cpp  display_mode.cpp  event_queue.cpp  events.cpp  file.cpp  font.cpp  gif.cpp  keyboard.cpp  locked_region.cpp  menu.cpp  monitor_info.cpp  mouse.cpp  native_dialog.cpp  path.cpp  shader.cpp  state.cpp  thread.cpp  timer.cpp  transform.cpp  utfstring.cpp  vertex.cpp  video.cpp
test/: test.cpp
